--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a63cfe18",
+   "id": "97b451fb",
    "metadata": {},
    "source": [
     "# 3 Implémentation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "4913b177",
    "metadata": {},
    "outputs": [],
@@ -91,13 +91,27 @@
     "            txt += \"━━━┻\"\n",
     "        txt += \"━━━┛\\n\"\n",
     "\n",
-    "        return txt"
+    "        return txt\n",
+    "    \n",
+    "    def add_wall(self, c1, c2):\n",
+    "        # Facultatif : on teste si les sommets sont bien dans le labyrinthe\n",
+    "        assert 0 <= c1[0] < self.height and \\\n",
+    "            0 <= c1[1] < self.width and \\\n",
+    "            0 <= c2[0] < self.height and \\\n",
+    "            0 <= c2[1] < self.width, \\\n",
+    "            f\"Erreur lors de l'ajout d'un mur entre {c1} et {c2} : les coordonnées de sont pas compatibles avec les dimensions du labyrinthe\"\n",
+    "        # Ajout du mur\n",
+    "        if c2 in self.neighbors[c1]:      # Si c2 est dans les voisines de c1\n",
+    "            self.neighbors[c1].remove(c2) # on le retire\n",
+    "        if c1 in self.neighbors[c2]:      # Si c3 est dans les voisines de c2\n",
+    "            self.neighbors[c2].remove(c1) # on le retire\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f0b3cc8c",
+   "id": "d0cb7487",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "da00dfee",
+   "id": "0a27ff12",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4a827357",
+   "id": "e5ec0ef8",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "271e1f8a",
+   "id": "e5533653",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "be37334e",
+   "id": "d5b8576c",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b5e6c51c",
+   "id": "51453914",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "608b1e27",
+   "id": "8a7a490d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5fddb805",
+   "id": "98548c2a",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0b6ae8ef",
+   "id": "75f360f6",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "84a0791f",
+   "id": "f4fa14e0",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d50d797",
+   "id": "b8c88ead",
    "metadata": {},
    "source": [
     "# 4 Manipulation de labyrinthes"
@@ -377,11 +391,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "4c77f50d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┏━━━┳━━━┳━━━┳━━━┳━━━┓\n",
+      "┃   ┃   ┃   ┃   ┃   ┃\n",
+      "┣━━━╋━━━╋━━━╋━━━╋━━━┫\n",
+      "┃   ┃   ┃   ┃   ┃   ┃\n",
+      "┣━━━╋━━━╋━━━╋━━━╋━━━┫\n",
+      "┃   ┃   ┃   ┃   ┃   ┃\n",
+      "┣━━━╋━━━╋━━━╋━━━╋━━━┫\n",
+      "┃   ┃   ┃   ┃   ┃   ┃\n",
+      "┣━━━╋━━━╋━━━╋━━━╋━━━┫\n",
+      "┃   ┃   ┃   ┃   ┃   ┃\n",
+      "┗━━━┻━━━┻━━━┻━━━┻━━━┛\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "laby = Maze(5, 5)\n",
+    "print(laby)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b9483814",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Maze' object has no attribute 'empty'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [15]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m laby \u001b[38;5;241m=\u001b[39m Maze(\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m5\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[43mlaby\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mempty\u001b[49m()\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(laby)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Maze' object has no attribute 'empty'"
+     ]
+    }
+   ],
+   "source": [
+    "laby = Maze(5, 5)\n",
+    "laby.empty()\n",
+    "print(laby)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9ea368cb",
+   "id": "8e7912e8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "laby.add_wall((0,0), (0,1))\n",
+    "print(laby)"
+   ]
   }
  ],
  "metadata": {
