Documentation - add_wall

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,9 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "id": "4913b177",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:37.708010Z",
+     "start_time": "2024-03-11T21:38:37.689424Z"
+    }
+   },
    "outputs": [],
    "source": [
     "class Maze:\n",
@@ -93,8 +98,14 @@
     "\n",
     "        return txt\n",
     "    \n",
-    "    def add_wall(self, c1, c2):\n",
-    "        # Facultatif : on teste si les sommets sont bien dans le labyrinthe\n",
+    "    def add_wall(self, c1: tuple, c2: tuple) -> None:\n",
+    "        \"\"\"\n",
+    "        Ajout d'un mur entre les cellules c1 et c2\n",
+    "        :param c1: tuple (l,c) des coordonnées de la première cellule\n",
+    "        :param c2: tuple (l,c) des coordonnées de la seconde cellule\n",
+    "        :return: None\n",
+    "        \"\"\"\n",
+    "        # On teste si les sommets sont bien dans le labyrinthe\n",
     "        assert 0 <= c1[0] < self.height and \\\n",
     "            0 <= c1[1] < self.width and \\\n",
     "            0 <= c2[0] < self.height and \\\n",
