Méthode remove_wall()

--- a/main.ipynb
+++ b/main.ipynb
@@ -116,6 +116,26 @@
     "            self.neighbors[c1].remove(c2) # on le retire\n",
     "        if c1 in self.neighbors[c2]:      # Si c3 est dans les voisines de c2\n",
     "            self.neighbors[c2].remove(c1) # on le retire\n",
+    "            \n",
+    "    def remove_wall(self, c1: tuple, c2: tuple) -> None:\n",
+    "        \"\"\"\n",
+    "        Suppression d'un mur entre les cellules c1 et c2\n",
+    "        :param c1: tuple (l,c) des coordonnées de la première cellule\n",
+    "        :param c2: tuple (l,c) des coordonnées de la seconde cellule\n",
+    "        :return: None\n",
+    "        \"\"\"\n",
+    "        # On teste si les sommets sont bien dans le labyrinthe\n",
+    "        assert 0 <= c1[0] < self.height and \\\n",
+    "            0 <= c1[1] < self.width and \\\n",
+    "            0 <= c2[0] < self.height and \\\n",
+    "            0 <= c2[1] < self.width, \\\n",
+    "            f\"Erreur lors de la suppression d'un mur entre {c1} et {c2} : les coordonnées de sont pas compatibles avec les dimensions du labyrinthe\"\n",
+    "        # Suppression du mur\n",
+    "        if c2 not in self.neighbors[c1]:  # Si c2 n'est pas dans les voisines de c1\n",
+    "            self.neighbors[c1].add(c2)    # on l'ajoute\n",
+    "        if c1 not in self.neighbors[c2]:  # Si c3 n'est pas dans les voisines de c2\n",
+    "            self.neighbors[c2].add(c1)    # on l'ajoute\n",
+    "            \n",
     "            "
    ]
   },
