Méthode get_walls()

--- a/main.ipynb
+++ b/main.ipynb
@@ -136,6 +136,20 @@
     "        if c1 not in self.neighbors[c2]:  # Si c3 n'est pas dans les voisines de c2\n",
     "            self.neighbors[c2].add(c1)    # on l'ajoute\n",
     "            \n",
+    "    def get_walls(self) -> list[list[tuple]]:\n",
+    "        \"\"\"\n",
+    "        Renvoie la liste des murs du labyrinthe\n",
+    "        :return: list[list[tuple]] : liste des murs du labyrinthe\n",
+    "        \"\"\"\n",
+    "        walls = []\n",
+    "        for i in range(self.height):\n",
+    "            for j in range(self.width):\n",
+    "                if (i+1, j) not in self.neighbors[(i,j)] and i+1 < self.height:\n",
+    "                    walls.append([(i,j), (i+1, j)])\n",
+    "                if (i, j+1) not in self.neighbors[(i,j)] and j+1 < self.width:\n",
+    "                    walls.append([(i,j), (i, j+1)])\n",
+    "        return walls\n",
+    "    \n",
     "            "
    ]
   },
