--- a/main.ipynb
+++ b/main.ipynb
@@ -150,6 +150,16 @@
     "                    walls.append([(i,j), (i, j+1)])\n",
     "        return walls\n",
     "    \n",
+    "    def fill(self) -> None:\n",
+    "        \"\"\"\n",
+    "        Remplissage complet du labyrinthe\n",
+    "        :return: None\n",
+    "        \"\"\"\n",
+    "        for c1 in {(i, j) for i in range(self.height) for j in range(self.width)}:\n",
+    "            for c2 in {(i, j) for i in range(self.height) for j in range(self.width)}:\n",
+    "                if c1 != c2:\n",
+    "                    self.add_wall(c1, c2)\n",
+    "                    \n",
     "            "
    ]
   },
