--- a/main.ipynb
+++ b/main.ipynb
@@ -160,6 +160,16 @@
     "                if c1 != c2:\n",
     "                    self.add_wall(c1, c2)\n",
     "                    \n",
+    "    def empty(self) -> None:\n",
+    "        \"\"\"\n",
+    "        Vidage complet du labyrinthe\n",
+    "        :return: None\n",
+    "        \"\"\"\n",
+    "        for c1 in {(i, j) for i in range(self.height) for j in range(self.width)}:\n",
+    "            for c2 in {(i, j) for i in range(self.height) for j in range(self.width)}:\n",
+    "                if c1 != c2:\n",
+    "                    self.remove_wall(c1, c2)\n",
+    "                    \n",
     "            "
    ]
   },
