Méthode get_contigous_cells()

--- a/main.ipynb
+++ b/main.ipynb
@@ -170,6 +170,26 @@
     "                if c1 != c2:\n",
     "                    self.remove_wall(c1, c2)\n",
     "                    \n",
+    "    def get_contiguous_cells(self, c: tuple) -> list[tuple]:\n",
+    "        \"\"\"\n",
+    "        Renvoie la liste des cellules contiguës à la cellule c\n",
+    "        :param c: tuple (l,c) des coordonnées de la cellule\n",
+    "        :return: list[tuple] : liste des cellules contiguës à c\n",
+    "        \"\"\"\n",
+    "        contiguous = []\n",
+    "        \n",
+    "        if c[0] > 0:\n",
+    "            contiguous.append((c[0]-1, c[1]))\n",
+    "        if c[0] < self.height-1:\n",
+    "            contiguous.append((c[0]+1, c[1]))\n",
+    "        if c[1] > 0:\n",
+    "            contiguous.append((c[0], c[1]-1))\n",
+    "        if c[1] < self.width-1:\n",
+    "            contiguous.append((c[0], c[1]+1))\n",
+    "        \n",
+    "        return contiguous\n",
+    "        \n",
+    "    \n",
     "            "
    ]
   },
