--- a/main.ipynb
+++ b/main.ipynb
@@ -190,14 +190,32 @@
     "        return contiguous\n",
     "        \n",
     "    \n",
+    "    def get_reachable_cells(self, c: tuple) -> list[tuple]:\n",
+    "        \"\"\"\n",
+    "        Renvoie la liste des cellules accessibles depuis la cellule c\n",
+    "        :param c: tuple (l,c) des coordonnées de la cellule\n",
+    "        :return: list[tuple] : liste des cellules accessibles depuis c\n",
+    "        \"\"\"\n",
+    "        reachable = []\n",
+    "        for cell in self.get_contiguous_cells(c):\n",
+    "            if cell in self.neighbors[c]:\n",
+    "                reachable.append(cell)\n",
+    "                \n",
+    "        return reachable\n",
+    "        \n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "id": "d0cb7487",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:37.791771Z",
+     "start_time": "2024-03-11T21:38:37.786758Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -207,8 +225,7 @@
       "- Dimensions de la grille : 4 x 4\n",
       "- Voisinages :\n",
       "{(0, 0): set(), (0, 1): set(), (0, 2): set(), (0, 3): set(), (1, 0): set(), (1, 1): set(), (1, 2): set(), (1, 3): set(), (2, 0): set(), (2, 1): set(), (2, 2): set(), (2, 3): set(), (3, 0): set(), (3, 1): set(), (3, 2): set(), (3, 3): set()}\n",
-      "- Structure cohérente\n",
-      "\n"
+      "- Structure cohérente\n"
      ]
     }
    ],
@@ -219,9 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "id": "0a27ff12",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:37.799021Z",
+     "start_time": "2024-03-11T21:38:37.793778Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -235,8 +257,7 @@
       "┃   ┃   ┃   ┃   ┃\n",
       "┣━━━╋━━━╋━━━╋━━━┫\n",
       "┃   ┃   ┃   ┃   ┃\n",
-      "┗━━━┻━━━┻━━━┻━━━┛\n",
-      "\n"
+      "┗━━━┻━━━┻━━━┻━━━┛\n"
      ]
     }
    ],
@@ -246,9 +267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "id": "e5ec0ef8",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:37.828642Z",
+     "start_time": "2024-03-11T21:38:37.819519Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -262,8 +288,7 @@
       "┃           ┃   ┃\n",
       "┣   ╋━━━╋━━━╋   ┫\n",
       "┃           ┃   ┃\n",
-      "┗━━━┻━━━┻━━━┻━━━┛\n",
-      "\n"
+      "┗━━━┻━━━┻━━━┻━━━┛\n"
      ]
     }
    ],
@@ -292,9 +317,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "id": "e5533653",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:37.861846Z",
+     "start_time": "2024-03-11T21:38:37.857730Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -308,8 +338,7 @@
       "┃           ┃   ┃\n",
       "┣   ╋━━━╋━━━╋   ┫\n",
       "┃           ┃   ┃\n",
-      "┗━━━┻━━━┻━━━┻━━━┛\n",
-      "\n"
+      "┗━━━┻━━━┻━━━┻━━━┛\n"
      ]
     }
    ],
@@ -321,9 +350,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "id": "d5b8576c",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:37.882488Z",
+     "start_time": "2024-03-11T21:38:37.878747Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -337,8 +371,7 @@
       "┃           ┃   ┃\n",
       "┣   ╋━━━╋━━━╋   ┫\n",
       "┃           ┃   ┃\n",
-      "┗━━━┻━━━┻━━━┻━━━┛\n",
-      "\n"
+      "┗━━━┻━━━┻━━━┻━━━┛\n"
      ]
     }
    ],
@@ -350,9 +383,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "id": "51453914",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:37.901483Z",
+     "start_time": "2024-03-11T21:38:37.896582Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -372,8 +410,7 @@
       "- Dimensions de la grille : 4 x 4\n",
       "- Voisinages :\n",
       "{(0, 0): {(1, 0)}, (0, 1): {(1, 1), (0, 2)}, (0, 2): {(0, 1), (0, 3)}, (0, 3): {(0, 2), (1, 3)}, (1, 0): {(2, 0), (0, 0)}, (1, 1): {(0, 1), (1, 2)}, (1, 2): {(1, 1), (2, 2)}, (1, 3): {(0, 3)}, (2, 0): {(1, 0), (2, 1), (3, 0)}, (2, 1): {(2, 0), (2, 2)}, (2, 2): {(1, 2), (2, 1)}, (2, 3): {(3, 3), (1, 3)}, (3, 0): {(3, 1), (2, 0)}, (3, 1): {(3, 2), (3, 0)}, (3, 2): {(3, 1)}, (3, 3): {(2, 3)}}\n",
-      "- Structure incohérente : (2, 3) X (1, 3)\n",
-      "\n"
+      "- Structure incohérente : (2, 3) X (1, 3)\n"
      ]
     }
    ],
@@ -385,9 +422,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "id": "8a7a490d",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:37.947053Z",
+     "start_time": "2024-03-11T21:38:37.943319Z"
+    }
+   },
    "outputs": [],
    "source": [
     "laby.neighbors[(2, 3)].remove((1,3))"
@@ -395,9 +437,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "id": "98548c2a",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:37.971176Z",
+     "start_time": "2024-03-11T21:38:37.963700Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -420,9 +467,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "id": "75f360f6",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:38.033741Z",
+     "start_time": "2024-03-11T21:38:38.028409Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -445,9 +497,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "id": "f4fa14e0",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:38.060771Z",
+     "start_time": "2024-03-11T21:38:38.056422Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -476,9 +533,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "id": "4c77f50d",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:38.119925Z",
+     "start_time": "2024-03-11T21:38:38.115702Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -494,8 +556,7 @@
       "┃   ┃   ┃   ┃   ┃   ┃\n",
       "┣━━━╋━━━╋━━━╋━━━╋━━━┫\n",
       "┃   ┃   ┃   ┃   ┃   ┃\n",
-      "┗━━━┻━━━┻━━━┻━━━┻━━━┛\n",
-      "\n"
+      "┗━━━┻━━━┻━━━┻━━━┻━━━┛\n"
      ]
     }
    ],
@@ -506,19 +567,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "id": "b9483814",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:38.141215Z",
+     "start_time": "2024-03-11T21:38:38.136797Z"
+    }
+   },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Maze' object has no attribute 'empty'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [15]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m laby \u001b[38;5;241m=\u001b[39m Maze(\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m5\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[43mlaby\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mempty\u001b[49m()\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(laby)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Maze' object has no attribute 'empty'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┏━━━┳━━━┳━━━┳━━━┳━━━┓\n",
+      "┃                   ┃\n",
+      "┣   ╋   ╋   ╋   ╋   ┫\n",
+      "┃                   ┃\n",
+      "┣   ╋   ╋   ╋   ╋   ┫\n",
+      "┃                   ┃\n",
+      "┣   ╋   ╋   ╋   ╋   ┫\n",
+      "┃                   ┃\n",
+      "┣   ╋   ╋   ╋   ╋   ┫\n",
+      "┃                   ┃\n",
+      "┗━━━┻━━━┻━━━┻━━━┻━━━┛\n"
      ]
     }
    ],
@@ -530,14 +602,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8e7912e8",
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┏━━━┳━━━┳━━━┳━━━┳━━━┓\n",
+      "┃   ┃   ┃   ┃   ┃   ┃\n",
+      "┣━━━╋━━━╋━━━╋━━━╋━━━┫\n",
+      "┃   ┃   ┃   ┃   ┃   ┃\n",
+      "┣━━━╋━━━╋━━━╋━━━╋━━━┫\n",
+      "┃   ┃   ┃   ┃   ┃   ┃\n",
+      "┣━━━╋━━━╋━━━╋━━━╋━━━┫\n",
+      "┃   ┃   ┃   ┃   ┃   ┃\n",
+      "┣━━━╋━━━╋━━━╋━━━╋━━━┫\n",
+      "┃   ┃   ┃   ┃   ┃   ┃\n",
+      "┗━━━┻━━━┻━━━┻━━━┻━━━┛\n"
+     ]
+    }
+   ],
    "source": [
-    "laby.add_wall((0,0), (0,1))\n",
+    "laby.fill()\n",
+    "print(laby)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:38.186146Z",
+     "start_time": "2024-03-11T21:38:38.180920Z"
+    }
+   },
+   "id": "6fb5acaff0d33803",
+   "execution_count": 52
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┏━━━┳━━━┳━━━┳━━━┳━━━┓\n",
+      "┃       ┃   ┃   ┃   ┃\n",
+      "┣━━━╋━━━╋━━━╋━━━╋━━━┫\n",
+      "┃   ┃   ┃   ┃   ┃   ┃\n",
+      "┣━━━╋━━━╋━━━╋━━━╋━━━┫\n",
+      "┃   ┃   ┃   ┃   ┃   ┃\n",
+      "┣━━━╋━━━╋━━━╋━━━╋━━━┫\n",
+      "┃   ┃   ┃   ┃   ┃   ┃\n",
+      "┣━━━╋━━━╋━━━╋━━━╋━━━┫\n",
+      "┃   ┃   ┃   ┃   ┃   ┃\n",
+      "┗━━━┻━━━┻━━━┻━━━┻━━━┛\n"
+     ]
+    }
+   ],
+   "source": [
+    "laby.remove_wall((0, 0), (0, 1))\n",
+    "print(laby)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:38.219503Z",
+     "start_time": "2024-03-11T21:38:38.213659Z"
+    }
+   },
+   "id": "c71b15a8ec2d493e",
+   "execution_count": 53
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "8e7912e8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:38.260057Z",
+     "start_time": "2024-03-11T21:38:38.253905Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┏━━━┳━━━┳━━━┳━━━┳━━━┓\n",
+      "┃   ┃               ┃\n",
+      "┣   ╋━━━╋   ╋   ╋   ┫\n",
+      "┃                   ┃\n",
+      "┣   ╋   ╋   ╋   ╋   ┫\n",
+      "┃                   ┃\n",
+      "┣   ╋   ╋   ╋   ╋   ┫\n",
+      "┃                   ┃\n",
+      "┣   ╋   ╋   ╋   ╋   ┫\n",
+      "┃                   ┃\n",
+      "┗━━━┻━━━┻━━━┻━━━┻━━━┛\n"
+     ]
+    }
+   ],
+   "source": [
+    "laby.empty()\n",
+    "laby.add_wall((0, 0), (0, 1))\n",
+    "laby.add_wall((0, 1), (1, 1))\n",
     "print(laby)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[(0, 0), (0, 1)], [(0, 1), (1, 1)]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(laby.get_walls())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:38.275283Z",
+     "start_time": "2024-03-11T21:38:38.271786Z"
+    }
+   },
+   "id": "383940f20f1be837",
+   "execution_count": 55
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 1), (0, 0), (0, 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(laby.get_contiguous_cells((0,1)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:38.290175Z",
+     "start_time": "2024-03-11T21:38:38.286477Z"
+    }
+   },
+   "id": "7d7e3392f1c01482",
+   "execution_count": 56
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(laby.get_reachable_cells((0,1)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:38.325020Z",
+     "start_time": "2024-03-11T21:38:38.320548Z"
+    }
+   },
+   "id": "70bf1086b29b9453",
+   "execution_count": 57
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-11T21:38:38.343311Z",
+     "start_time": "2024-03-11T21:38:38.340916Z"
+    }
+   },
+   "id": "1ef3442a6ba2af27",
+   "execution_count": 57
   }
  ],
  "metadata": {
