Génération par Arbre binaire

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,14 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "4913b177",
+   "outputs": [],
+   "source": [
+    "import random as rd"
+   ],
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:37.708010Z",
-     "start_time": "2024-03-11T21:38:37.689424Z"
+     "end_time": "2024-03-11T22:02:49.820881Z",
+     "start_time": "2024-03-11T22:02:49.817246Z"
     }
    },
+   "id": "3224a69af396bec5",
+   "execution_count": 100
+  },
+  {
+   "cell_type": "code",
    "outputs": [],
    "source": [
     "class Maze:\n",
@@ -202,18 +210,52 @@
     "                reachable.append(cell)\n",
     "                \n",
     "        return reachable\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def gen_btree(cls, h: int, w: int) -> 'Maze':\n",
+    "        \"\"\"\n",
+    "        Génération d'un labyrinthe de dimensions height x width\n",
+    "        selon la méthode de l'arbre binaire\n",
+    "        :param h: int : hauteur du labyrinthe\n",
+    "        :param w: int : largeur du labyrinthe\n",
+    "        :return: Maze : labyrinthe généré\n",
+    "        \"\"\"\n",
+    "        laby = cls(h, w)\n",
+    "        laby.fill()\n",
+    "        for i in range(h):\n",
+    "            for j in range(w):\n",
+    "                cell = (i, j)\n",
+    "                if i < h-1 and j < w-1:\n",
+    "                    if (i+1, j) not in laby.neighbors[cell] and (i, j+1) not in laby.neighbors[cell]:\n",
+    "                        laby.remove_wall(cell, (i+1, j) if rd.choice([True, False]) else (i, j+1))\n",
+    "                elif i < h-1:\n",
+    "                    if (i+1, j) not in laby.neighbors[cell]:\n",
+    "                        laby.remove_wall(cell, (i+1, j))\n",
+    "                elif j < w-1:\n",
+    "                    if (i, j+1) not in laby.neighbors[cell]:\n",
+    "                        laby.remove_wall(cell, (i, j+1))\n",
+    "                        \n",
+    "        return laby\n",
     "        \n",
     "            "
-   ]
+   ],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-03-11T22:02:49.882694Z",
+     "start_time": "2024-03-11T22:02:49.852268Z"
+    }
+   },
+   "id": "4913b177",
+   "execution_count": 101
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 102,
    "id": "d0cb7487",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:37.791771Z",
-     "start_time": "2024-03-11T21:38:37.786758Z"
+     "end_time": "2024-03-11T22:02:49.948314Z",
+     "start_time": "2024-03-11T22:02:49.943286Z"
     }
    },
    "outputs": [
@@ -236,12 +278,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 103,
    "id": "0a27ff12",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:37.799021Z",
-     "start_time": "2024-03-11T21:38:37.793778Z"
+     "end_time": "2024-03-11T22:02:49.977745Z",
+     "start_time": "2024-03-11T22:02:49.973878Z"
     }
    },
    "outputs": [
@@ -267,12 +309,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 104,
    "id": "e5ec0ef8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:37.828642Z",
-     "start_time": "2024-03-11T21:38:37.819519Z"
+     "end_time": "2024-03-11T22:02:50.024336Z",
+     "start_time": "2024-03-11T22:02:50.016822Z"
     }
    },
    "outputs": [
@@ -317,12 +359,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 105,
    "id": "e5533653",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:37.861846Z",
-     "start_time": "2024-03-11T21:38:37.857730Z"
+     "end_time": "2024-03-11T22:02:50.043521Z",
+     "start_time": "2024-03-11T22:02:50.038514Z"
     }
    },
    "outputs": [
@@ -350,12 +392,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 106,
    "id": "d5b8576c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:37.882488Z",
-     "start_time": "2024-03-11T21:38:37.878747Z"
+     "end_time": "2024-03-11T22:02:50.064413Z",
+     "start_time": "2024-03-11T22:02:50.059310Z"
     }
    },
    "outputs": [
@@ -383,12 +425,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 107,
    "id": "51453914",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:37.901483Z",
-     "start_time": "2024-03-11T21:38:37.896582Z"
+     "end_time": "2024-03-11T22:02:50.141997Z",
+     "start_time": "2024-03-11T22:02:50.133329Z"
     }
    },
    "outputs": [
@@ -422,12 +464,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 108,
    "id": "8a7a490d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:37.947053Z",
-     "start_time": "2024-03-11T21:38:37.943319Z"
+     "end_time": "2024-03-11T22:02:50.177197Z",
+     "start_time": "2024-03-11T22:02:50.172929Z"
     }
    },
    "outputs": [],
@@ -437,12 +479,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 109,
    "id": "98548c2a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:37.971176Z",
-     "start_time": "2024-03-11T21:38:37.963700Z"
+     "end_time": "2024-03-11T22:02:50.247173Z",
+     "start_time": "2024-03-11T22:02:50.242963Z"
     }
    },
    "outputs": [
@@ -467,12 +509,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 110,
    "id": "75f360f6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:38.033741Z",
-     "start_time": "2024-03-11T21:38:38.028409Z"
+     "end_time": "2024-03-11T22:02:50.278026Z",
+     "start_time": "2024-03-11T22:02:50.270990Z"
     }
    },
    "outputs": [
@@ -497,12 +539,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 111,
    "id": "f4fa14e0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:38.060771Z",
-     "start_time": "2024-03-11T21:38:38.056422Z"
+     "end_time": "2024-03-11T22:02:50.298088Z",
+     "start_time": "2024-03-11T22:02:50.293389Z"
     }
    },
    "outputs": [
@@ -533,12 +575,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 112,
    "id": "4c77f50d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:38.119925Z",
-     "start_time": "2024-03-11T21:38:38.115702Z"
+     "end_time": "2024-03-11T22:02:50.314445Z",
+     "start_time": "2024-03-11T22:02:50.310132Z"
     }
    },
    "outputs": [
@@ -567,12 +609,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 113,
    "id": "b9483814",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:38.141215Z",
-     "start_time": "2024-03-11T21:38:38.136797Z"
+     "end_time": "2024-03-11T22:02:50.332765Z",
+     "start_time": "2024-03-11T22:02:50.327276Z"
     }
    },
    "outputs": [
@@ -628,12 +670,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:38.186146Z",
-     "start_time": "2024-03-11T21:38:38.180920Z"
+     "end_time": "2024-03-11T22:02:50.381577Z",
+     "start_time": "2024-03-11T22:02:50.377265Z"
     }
    },
    "id": "6fb5acaff0d33803",
-   "execution_count": 52
+   "execution_count": 114
   },
   {
    "cell_type": "code",
@@ -663,21 +705,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:38.219503Z",
-     "start_time": "2024-03-11T21:38:38.213659Z"
+     "end_time": "2024-03-11T22:02:50.414972Z",
+     "start_time": "2024-03-11T22:02:50.410269Z"
     }
    },
    "id": "c71b15a8ec2d493e",
-   "execution_count": 53
+   "execution_count": 115
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 116,
    "id": "8e7912e8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:38.260057Z",
-     "start_time": "2024-03-11T21:38:38.253905Z"
+     "end_time": "2024-03-11T22:02:50.453340Z",
+     "start_time": "2024-03-11T22:02:50.447175Z"
     }
    },
    "outputs": [
@@ -723,12 +765,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:38.275283Z",
-     "start_time": "2024-03-11T21:38:38.271786Z"
+     "end_time": "2024-03-11T22:02:50.474504Z",
+     "start_time": "2024-03-11T22:02:50.469151Z"
     }
    },
    "id": "383940f20f1be837",
-   "execution_count": 55
+   "execution_count": 117
   },
   {
    "cell_type": "code",
@@ -747,12 +789,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:38.290175Z",
-     "start_time": "2024-03-11T21:38:38.286477Z"
+     "end_time": "2024-03-11T22:02:50.490212Z",
+     "start_time": "2024-03-11T22:02:50.486313Z"
     }
    },
    "id": "7d7e3392f1c01482",
-   "execution_count": 56
+   "execution_count": 118
   },
   {
    "cell_type": "code",
@@ -771,26 +813,74 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:38.325020Z",
-     "start_time": "2024-03-11T21:38:38.320548Z"
+     "end_time": "2024-03-11T22:02:50.530572Z",
+     "start_time": "2024-03-11T22:02:50.526110Z"
     }
    },
    "id": "70bf1086b29b9453",
-   "execution_count": 57
+   "execution_count": 119
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 5 Génération"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "125a114b4c1a1cf6"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 5.1 Arbre binaire"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "20cc371148a48f59"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┏━━━┳━━━┳━━━┳━━━┓\n",
+      "┃       ┃       ┃\n",
+      "┣━━━╋   ╋━━━╋   ┫\n",
+      "┃       ┃   ┃   ┃\n",
+      "┣━━━╋   ╋   ╋   ┫\n",
+      "┃   ┃           ┃\n",
+      "┣   ╋━━━╋━━━╋   ┫\n",
+      "┃               ┃\n",
+      "┗━━━┻━━━┻━━━┻━━━┛\n"
+     ]
+    }
+   ],
+   "source": [
+    "laby = Maze.gen_btree(4, 4)\n",
+    "print(laby)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-11T22:03:05.171499Z",
+     "start_time": "2024-03-11T22:03:05.165850Z"
+    }
+   },
+   "id": "1ef3442a6ba2af27",
+   "execution_count": 121
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-11T21:38:38.343311Z",
-     "start_time": "2024-03-11T21:38:38.340916Z"
-    }
+    "collapsed": false
    },
-   "id": "1ef3442a6ba2af27",
-   "execution_count": 57
+   "id": "a19f8c8a6f4a892e"
   }
  ],
  "metadata": {
