--- a/main.ipynb
+++ b/main.ipynb
@@ -17,12 +17,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:49.820881Z",
-     "start_time": "2024-03-11T22:02:49.817246Z"
+     "end_time": "2024-03-13T21:45:19.521600Z",
+     "start_time": "2024-03-13T21:45:19.517593Z"
     }
    },
    "id": "3224a69af396bec5",
-   "execution_count": 100
+   "execution_count": 194
   },
   {
    "cell_type": "code",
@@ -223,7 +223,9 @@
     "        laby = cls(h, w)\n",
     "        laby.fill()\n",
     "        for i in range(h):\n",
+    "            print('i', i)\n",
     "            for j in range(w):\n",
+    "                print('j', j)\n",
     "                cell = (i, j)\n",
     "                if i < h-1 and j < w-1:\n",
     "                    if (i+1, j) not in laby.neighbors[cell] and (i, j+1) not in laby.neighbors[cell]:\n",
@@ -236,26 +238,60 @@
     "                        laby.remove_wall(cell, (i, j+1))\n",
     "                        \n",
     "        return laby\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def gen_sidewinder(cls, h: int, w: int) -> 'Maze':\n",
+    "        \"\"\"\n",
+    "        Génération d'un labyrinthe de dimensions height x width\n",
+    "        selon la méthode du sidewinder\n",
+    "        :param h: int : hauteur du labyrinthe\n",
+    "        :param w: int : largeur du labyrinthe\n",
+    "        :return: Maze : labyrinthe généré\n",
+    "        \"\"\"\n",
+    "        laby = cls(h, w)\n",
+    "        laby.fill()\n",
+    "        for i in range(h - 1):\n",
+    "            print('i', i)\n",
+    "            sequence = []\n",
+    "            for j in range(w - 1):\n",
+    "                print('j', j)\n",
+    "                cell = (i, j)\n",
+    "                sequence.append(cell)\n",
+    "                if rd.choice([True, False]):\n",
+    "                    laby.remove_wall(cell, (i, j + 1))\n",
+    "                else:\n",
+    "                    random_cell = rd.choice(sequence)\n",
+    "                    laby.remove_wall(random_cell, (random_cell[0] + 1, random_cell[1]))\n",
+    "                    sequence = []\n",
+    "            sequence.append((i, w - 1))\n",
+    "            random_cell = rd.choice(sequence)\n",
+    "            laby.remove_wall(random_cell, (random_cell[0] + 1, random_cell[1]))\n",
+    "        \n",
+    "        for j in range(w - 1):\n",
+    "            cell = (h - 1, j)\n",
+    "            laby.remove_wall(cell, (h - 1, j + 1))\n",
+    "                    \n",
+    "        return laby\n",
     "        \n",
     "            "
    ],
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:49.882694Z",
-     "start_time": "2024-03-11T22:02:49.852268Z"
+     "end_time": "2024-03-13T21:45:19.707818Z",
+     "start_time": "2024-03-13T21:45:19.671566Z"
     }
    },
    "id": "4913b177",
-   "execution_count": 101
+   "execution_count": 195
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 196,
    "id": "d0cb7487",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:49.948314Z",
-     "start_time": "2024-03-11T22:02:49.943286Z"
+     "end_time": "2024-03-13T21:45:19.716628Z",
+     "start_time": "2024-03-13T21:45:19.710818Z"
     }
    },
    "outputs": [
@@ -278,12 +314,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 197,
    "id": "0a27ff12",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:49.977745Z",
-     "start_time": "2024-03-11T22:02:49.973878Z"
+     "end_time": "2024-03-13T21:45:19.735976Z",
+     "start_time": "2024-03-13T21:45:19.731645Z"
     }
    },
    "outputs": [
@@ -309,12 +345,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 198,
    "id": "e5ec0ef8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:50.024336Z",
-     "start_time": "2024-03-11T22:02:50.016822Z"
+     "end_time": "2024-03-13T21:45:19.772847Z",
+     "start_time": "2024-03-13T21:45:19.764067Z"
     }
    },
    "outputs": [
@@ -359,12 +395,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 199,
    "id": "e5533653",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:50.043521Z",
-     "start_time": "2024-03-11T22:02:50.038514Z"
+     "end_time": "2024-03-13T21:45:19.837905Z",
+     "start_time": "2024-03-13T21:45:19.832517Z"
     }
    },
    "outputs": [
@@ -392,12 +428,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 200,
    "id": "d5b8576c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:50.064413Z",
-     "start_time": "2024-03-11T22:02:50.059310Z"
+     "end_time": "2024-03-13T21:45:19.866520Z",
+     "start_time": "2024-03-13T21:45:19.862487Z"
     }
    },
    "outputs": [
@@ -425,12 +461,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 201,
    "id": "51453914",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:50.141997Z",
-     "start_time": "2024-03-11T22:02:50.133329Z"
+     "end_time": "2024-03-13T21:45:19.928278Z",
+     "start_time": "2024-03-13T21:45:19.923613Z"
     }
    },
    "outputs": [
@@ -464,12 +500,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 202,
    "id": "8a7a490d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:50.177197Z",
-     "start_time": "2024-03-11T22:02:50.172929Z"
+     "end_time": "2024-03-13T21:45:19.960782Z",
+     "start_time": "2024-03-13T21:45:19.957279Z"
     }
    },
    "outputs": [],
@@ -479,12 +515,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 203,
    "id": "98548c2a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:50.247173Z",
-     "start_time": "2024-03-11T22:02:50.242963Z"
+     "end_time": "2024-03-13T21:45:20.021979Z",
+     "start_time": "2024-03-13T21:45:20.015263Z"
     }
    },
    "outputs": [
@@ -509,12 +545,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 204,
    "id": "75f360f6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:50.278026Z",
-     "start_time": "2024-03-11T22:02:50.270990Z"
+     "end_time": "2024-03-13T21:45:20.062872Z",
+     "start_time": "2024-03-13T21:45:20.057646Z"
     }
    },
    "outputs": [
@@ -539,12 +575,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 205,
    "id": "f4fa14e0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:50.298088Z",
-     "start_time": "2024-03-11T22:02:50.293389Z"
+     "end_time": "2024-03-13T21:45:20.097727Z",
+     "start_time": "2024-03-13T21:45:20.092984Z"
     }
    },
    "outputs": [
@@ -575,12 +611,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 206,
    "id": "4c77f50d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:50.314445Z",
-     "start_time": "2024-03-11T22:02:50.310132Z"
+     "end_time": "2024-03-13T21:45:20.117961Z",
+     "start_time": "2024-03-13T21:45:20.112981Z"
     }
    },
    "outputs": [
@@ -609,12 +645,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 207,
    "id": "b9483814",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:50.332765Z",
-     "start_time": "2024-03-11T22:02:50.327276Z"
+     "end_time": "2024-03-13T21:45:20.138579Z",
+     "start_time": "2024-03-13T21:45:20.133972Z"
     }
    },
    "outputs": [
@@ -670,12 +706,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:50.381577Z",
-     "start_time": "2024-03-11T22:02:50.377265Z"
+     "end_time": "2024-03-13T21:45:20.183358Z",
+     "start_time": "2024-03-13T21:45:20.178525Z"
     }
    },
    "id": "6fb5acaff0d33803",
-   "execution_count": 114
+   "execution_count": 208
   },
   {
    "cell_type": "code",
@@ -705,21 +741,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:50.414972Z",
-     "start_time": "2024-03-11T22:02:50.410269Z"
+     "end_time": "2024-03-13T21:45:20.217090Z",
+     "start_time": "2024-03-13T21:45:20.212922Z"
     }
    },
    "id": "c71b15a8ec2d493e",
-   "execution_count": 115
+   "execution_count": 209
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 210,
    "id": "8e7912e8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:50.453340Z",
-     "start_time": "2024-03-11T22:02:50.447175Z"
+     "end_time": "2024-03-13T21:45:20.271460Z",
+     "start_time": "2024-03-13T21:45:20.265763Z"
     }
    },
    "outputs": [
@@ -765,12 +801,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:50.474504Z",
-     "start_time": "2024-03-11T22:02:50.469151Z"
+     "end_time": "2024-03-13T21:45:20.293070Z",
+     "start_time": "2024-03-13T21:45:20.288921Z"
     }
    },
    "id": "383940f20f1be837",
-   "execution_count": 117
+   "execution_count": 211
   },
   {
    "cell_type": "code",
@@ -789,12 +825,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:50.490212Z",
-     "start_time": "2024-03-11T22:02:50.486313Z"
+     "end_time": "2024-03-13T21:45:20.333386Z",
+     "start_time": "2024-03-13T21:45:20.328569Z"
     }
    },
    "id": "7d7e3392f1c01482",
-   "execution_count": 118
+   "execution_count": 212
   },
   {
    "cell_type": "code",
@@ -813,12 +849,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:02:50.530572Z",
-     "start_time": "2024-03-11T22:02:50.526110Z"
+     "end_time": "2024-03-13T21:45:20.360168Z",
+     "start_time": "2024-03-13T21:45:20.355726Z"
     }
    },
    "id": "70bf1086b29b9453",
-   "execution_count": 119
+   "execution_count": 213
   },
   {
    "cell_type": "markdown",
@@ -847,13 +883,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "i 0\n",
+      "j 0\n",
+      "j 1\n",
+      "j 2\n",
+      "j 3\n",
+      "i 1\n",
+      "j 0\n",
+      "j 1\n",
+      "j 2\n",
+      "j 3\n",
+      "i 2\n",
+      "j 0\n",
+      "j 1\n",
+      "j 2\n",
+      "j 3\n",
+      "i 3\n",
+      "j 0\n",
+      "j 1\n",
+      "j 2\n",
+      "j 3\n",
       "┏━━━┳━━━┳━━━┳━━━┓\n",
       "┃       ┃       ┃\n",
       "┣━━━╋   ╋━━━╋   ┫\n",
-      "┃       ┃   ┃   ┃\n",
-      "┣━━━╋   ╋   ╋   ┫\n",
-      "┃   ┃           ┃\n",
-      "┣   ╋━━━╋━━━╋   ┫\n",
+      "┃   ┃   ┃   ┃   ┃\n",
+      "┣   ╋   ╋   ╋   ┫\n",
+      "┃   ┃   ┃   ┃   ┃\n",
+      "┣   ╋   ╋   ╋   ┫\n",
       "┃               ┃\n",
       "┗━━━┻━━━┻━━━┻━━━┛\n"
      ]
@@ -866,21 +922,71 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-11T22:03:05.171499Z",
-     "start_time": "2024-03-11T22:03:05.165850Z"
+     "end_time": "2024-03-13T21:45:20.601426Z",
+     "start_time": "2024-03-13T21:45:20.596429Z"
     }
    },
    "id": "1ef3442a6ba2af27",
-   "execution_count": 121
+   "execution_count": 214
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i 0\n",
+      "j 0\n",
+      "j 1\n",
+      "j 2\n",
+      "i 1\n",
+      "j 0\n",
+      "j 1\n",
+      "j 2\n",
+      "i 2\n",
+      "j 0\n",
+      "j 1\n",
+      "j 2\n",
+      "┏━━━┳━━━┳━━━┳━━━┓\n",
+      "┃   ┃   ┃   ┃   ┃\n",
+      "┣   ╋   ╋   ╋   ┫\n",
+      "┃       ┃   ┃   ┃\n",
+      "┣━━━╋   ╋   ╋   ┫\n",
+      "┃   ┃   ┃   ┃   ┃\n",
+      "┣   ╋   ╋   ╋   ┫\n",
+      "┃               ┃\n",
+      "┗━━━┻━━━┻━━━┻━━━┛\n"
+     ]
+    }
+   ],
+   "source": [
+    "laby = Maze.gen_sidewinder(4, 4)\n",
+    "print(laby)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-13T21:45:29.256621Z",
+     "start_time": "2024-03-13T21:45:29.251679Z"
+    }
+   },
+   "id": "a19f8c8a6f4a892e",
+   "execution_count": 217
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-13T21:45:20.637878Z",
+     "start_time": "2024-03-13T21:45:20.634702Z"
+    }
    },
-   "id": "a19f8c8a6f4a892e"
+   "id": "a87cf9f01aa012e2",
+   "execution_count": 215
   }
  ],
  "metadata": {
